--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.0"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.9.7"
   }
 }
