--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^14.0.0"
+    "graphql": "^14.0.0",
+    "mongodb": "^3.1.4"
   },
   "devDependencies": {
     "parcel-bundler": "^1.9.7"
